# anydocs

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  sync.yml
scripts/: eval_2shot.py  eval_agent.py  eval_rescue.py  eval_search.py  eval_served.py  smoke_ingest.py  sweep_chunk.py  verify_anchors.py
sources/: claude-code.yaml  codex.yaml  cursor.yaml  opencode.yaml  xai.yaml
src/anydocs/: artifact.py  chunk.py  cli.py  index.py  links.py  models.py  query.py  server.py
src/anydocs/ingest/: __init__.py  fetch.py  filters.py  llms_full.py  llms_txt.py  sitemap.py
tests/: test_build_artifact.py  test_query.py  test_server.py
