[project]
name = "anydocs"
version = "0.1.0"
description = "MCP server for fast BM25 search across many third-party documentation sites"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.2",
    "pyyaml>=6.0",
    "zstandard>=0.22",
]

[project.scripts]
anydocs = "anydocs.server:main"
anydocs-build = "anydocs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anydocs"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
