[project]
name = "anydocs"
version = "0.1.0"
description = "MCP server for fast BM25 search across many third-party documentation sites"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kiyeon Jeon", email = "kiyeon.jeon.21@gmail.com" }]
keywords = ["mcp", "documentation", "search", "bm25", "sqlite", "fts5", "coding-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "httpx>=0.27",
    "mcp>=1.2",
    "pyyaml>=6.0",
    "zstandard>=0.22",
]

[project.urls]
Homepage = "https://github.com/kiyeonjeon21/anydocs"
Issues = "https://github.com/kiyeonjeon21/anydocs/issues"

[project.scripts]
anydocs = "anydocs.server:main"
anydocs-build = "anydocs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anydocs"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
